- Readded Main assembly to fix missing SQL provider bug - Fixed a bug where the locations view model would not load the associated view - Fixed some bugs with missing NuGet packages

--- a/Modules/Locations/Locations.csproj
+++ b/Modules/Locations/Locations.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{80E4E7FE-E727-4946-AE56-0782A2AA1EF9}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RpgTools.Locations</RootNamespace>
     <AssemblyName>Locations</AssemblyName>
