--- a/Tools/App.config
+++ b/Tools/App.config
@@ -7,15 +7,19 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <connectionStrings>
+    <add name="RpgTools"
+         connectionString="Data Source=(LocalDb)\mssqllocaldb;Initial Catalog=RpgTools;Integrated Security=SSPI;"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="MSSQLLocalDB" />
+        <parameter value="mssqllocaldb" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-
 </configuration>
