--- a/Tools/packages.config
+++ b/Tools/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="Caliburn.Micro" version="2.0.1" targetFramework="net45" />
   <package id="Caliburn.Micro.Core" version="2.0.1" targetFramework="net45" />
-  <package id="Fody" version="1.27.0" targetFramework="net45" developmentDependency="true" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Fody" version="1.28.0" targetFramework="net45" developmentDependency="true" />
   <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="PropertyChanged.Fody" version="1.49.0" targetFramework="net45" developmentDependency="true" />
 </packages>
