Rewrote inheritance hirachy for bul, details and complete requests.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -74,13 +74,16 @@
     <Compile Include="Common\ITimeSensitive.cs" />
     <Compile Include="Common\IWriteable.cs" />
     <Compile Include="Common\Requests\BulkDatabaseRequest.cs" />
+    <Compile Include="Common\Requests\IDatabaseBulkRequest.cs" />
     <Compile Include="Common\Requests\CompleteDatabaseRequest.cs" />
+    <Compile Include="Common\Requests\IDatabaseCompleteRequest.cs" />
     <Compile Include="Common\Requests\DetailsDatabaseRequest.cs" />
+    <Compile Include="Common\Requests\IDatabaseDetailsRequest.cs" />
     <Compile Include="Common\Requests\DatabaseDiscoveryRequest.cs" />
-    <Compile Include="Common\Requests\IBulkDatabaseRequest.cs" />
-    <Compile Include="Common\Requests\ICompleteDatabaseRequest.cs" />
+    <Compile Include="Common\Requests\IBulkRequest.cs" />
+    <Compile Include="Common\Requests\ICompleteRequest.cs" />
     <Compile Include="Common\Requests\IDatabaseDiscoveryRequest.cs" />
-    <Compile Include="Common\Requests\IDetailsDatabaseRequest.cs" />
+    <Compile Include="Common\Requests\IDetailsRequest.cs" />
     <Compile Include="Common\Requests\IDiscoveryRequest.cs" />
     <Compile Include="Common\Requests\IRequest.cs" />
     <Compile Include="Common\Response.cs" />
