- Applied the service client pattern to the characters repository. - Added a Character repository factory. - Fixed a bug in the locations details request.

--- a/Modules/Characters/Characters.csproj
+++ b/Modules/Characters/Characters.csproj
@@ -50,6 +50,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CharacterRepositoryFactory.cs" />
+    <Compile Include="Requests\CharacterBulkRequest.cs" />
+    <Compile Include="Requests\CharacterCompleteRequest.cs" />
+    <Compile Include="CharacterContext.cs" />
+    <Compile Include="Requests\CharacterDetailsRequest.cs" />
+    <Compile Include="Requests\CharacterDiscoveryRequest.cs" />
     <Compile Include="Converters\CharacterConverter.cs" />
     <Compile Include="DataContracts\CharacterDataContract.cs" />
     <Compile Include="Converters\CharacterDataContractConverter.cs" />
