--- a/Modules/Locations/Locations.csproj
+++ b/Modules/Locations/Locations.csproj
@@ -50,6 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Requests\BulkDatabaseRequest.cs" />
+    <Compile Include="Requests\CompleteDatabaseRequest.cs" />
     <Compile Include="Converter\CityDataContractConverter.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -64,17 +66,24 @@
     <Compile Include="Converter\SectorLocationConverter.cs" />
     <Compile Include="Converter\StarSystemLocationConverter.cs" />
     <Compile Include="Converter\SystemDataContractConverter.cs" />
-    <Compile Include="Requests\LocationCompleteDatabaseRequest.cs" />
-    <Compile Include="Requests\LocationBulkDatabaseRequest.cs" />
-    <Compile Include="Requests\LocationDetailsDatabaseRequest.cs" />
-    <Compile Include="Requests\LocationDiscoveryDatabaseRequest.cs" />
+    <Compile Include="Requests\DeleteDatabaseRequest.cs" />
+    <Compile Include="Requests\LocationBulkRequest.cs" />
+    <Compile Include="Requests\LocationCompleteRequest.cs" />
+    <Compile Include="Requests\LocationDeleteRequest.cs" />
+    <Compile Include="Requests\LocationWriteRequest.cs" />
+    <Compile Include="Requests\DetailsDatabaseRequest.cs" />
+    <Compile Include="Requests\IDatabaseRequest.cs" />
+    <Compile Include="DatabaseSeviceClient.cs" />
     <Compile Include="DataContracts\CityDetailsDataContract.cs" />
+    <Compile Include="DataContracts\LocalisationDataContract.cs" />
     <Compile Include="DataContracts\LocationDataContract.cs" />
     <Compile Include="DataContracts\LocationDetailsDataContract.cs" />
     <Compile Include="DataContracts\PlanetDetailsDataContract.cs" />
     <Compile Include="DataContracts\SectorDetailsDataContract.cs" />
     <Compile Include="DataContracts\StarSystemDetailsDataContract.cs" />
     <Compile Include="LocationContext.cs" />
+    <Compile Include="Requests\LocationDetailsRequest.cs" />
+    <Compile Include="Requests\LocationDiscoveryRequest.cs" />
     <Compile Include="LocationRepository.cs" />
     <Compile Include="LocationRepositoryFactory.cs" />
     <Compile Include="Migrations\201503111633274_Initial.cs" />
@@ -88,6 +97,14 @@
     <Compile Include="Migrations\201503111636395_Version2.cs" />
     <Compile Include="Migrations\201503111636395_Version2.Designer.cs">
       <DependentUpon>201503111636395_Version2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201503242037056_Version3.cs" />
+    <Compile Include="Migrations\201503242037056_Version3.Designer.cs">
+      <DependentUpon>201503242037056_Version3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201503242226460_Version31.cs" />
+    <Compile Include="Migrations\201503242226460_Version31.Designer.cs">
+      <DependentUpon>201503242226460_Version31.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -112,7 +129,14 @@
     <EmbeddedResource Include="Migrations\201503111636395_Version2.resx">
       <DependentUpon>201503111636395_Version2.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503242037056_Version3.resx">
+      <DependentUpon>201503242037056_Version3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201503242226460_Version31.resx">
+      <DependentUpon>201503242226460_Version31.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
