--- a/Modules/Locations/Locations.csproj
+++ b/Modules/Locations/Locations.csproj
@@ -34,11 +34,13 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -72,7 +74,6 @@
     <Compile Include="Requests\LocationCompleteRequest.cs" />
     <Compile Include="Requests\LocationDeleteRequest.cs" />
     <Compile Include="Requests\LocationWriteRequest.cs" />
-    <Compile Include="DatabaseSeviceClient.cs" />
     <Compile Include="DataContracts\CityDetailsDataContract.cs" />
     <Compile Include="DataContracts\LocalisationDataContract.cs" />
     <Compile Include="DataContracts\LocationDataContract.cs" />
