--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -102,7 +102,9 @@
     <Compile Include="Models\Locations\Planet.cs" />
     <Compile Include="Models\Locations\Sector.cs" />
     <Compile Include="Models\Locations\StarSystem.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
