--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>Core</AssemblyName>
     <TargetFrameworkVersion>v4.5.3</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>d663996b</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>a2f587da</NuGetPackageImportStamp>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -44,6 +44,10 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="PropertyChanged">
+      <HintPath>..\packages\PropertyChanged.Fody.1.49.0\Lib\portable-net4+sl4+wp8+win8+wpa81+MonoAndroid16+MonoTouch40\PropertyChanged.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -57,6 +61,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\CheckListItem.cs" />
     <Compile Include="Common\Converter\ConverterAdapter.cs" />
     <Compile Include="Common\DatabaseSeviceClient.cs" />
     <Compile Include="Common\DictionaryRange.cs" />
@@ -85,12 +90,13 @@
     <Compile Include="Common\Response.cs" />
     <Compile Include="Common\Converter\ResponseConverter.cs" />
     <Compile Include="Common\ServiceException.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Contracts\IRpgModuleContract.cs" />
     <Compile Include="Contracts\IRpgModuleMetadata.cs" />
     <Compile Include="Contracts\IShell.cs" />
     <Compile Include="Contracts\RpgModuleMetadataAttribute.cs" />
     <Compile Include="Converter\DbGeographyToStringConverter.cs" />
-    <Compile Include="MarkupExtensions\EnumListExtension.cs" />
+    <Compile Include="Resources\MarkupExtensions\EnumListExtension.cs" />
     <Compile Include="Models\Characters\Character.cs" />
     <Compile Include="Models\Characters\Character.Family.cs" />
     <Compile Include="Models\Characters\Character.Metadata.cs" />
@@ -108,7 +114,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Page Include="Resources\Converter.xaml">
@@ -120,7 +128,20 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="FodyWeavers.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Fody.1.28.3\build\Fody.targets" Condition="Exists('..\packages\Fody.1.28.3\build\Fody.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Fody.1.28.3\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.1.28.3\build\Fody.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
