--- a/Core/packages.config
+++ b/Core/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net453" />
+  <package id="Fody" version="1.28.3" targetFramework="net453" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="PropertyChanged.Fody" version="1.49.0" targetFramework="net453" developmentDependency="true" />
 </packages>
