--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -96,6 +96,8 @@
     <Compile Include="Contracts\IShell.cs" />
     <Compile Include="Contracts\RpgModuleMetadataAttribute.cs" />
     <Compile Include="Converter\DbGeographyToStringConverter.cs" />
+    <Compile Include="Extensions\EnumExtensionMethods.cs" />
+    <Compile Include="Extensions\EnumListExtension.cs" />
     <Compile Include="Resources\MarkupExtensions\EnumListExtension.cs" />
     <Compile Include="Models\Characters\Character.cs" />
     <Compile Include="Models\Characters\Character.Family.cs" />
@@ -131,9 +133,7 @@
   <ItemGroup>
     <Content Include="FodyWeavers.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Extensions\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.1.28.3\build\Fody.targets" Condition="Exists('..\packages\Fody.1.28.3\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
