- Moved Repositories to sub folder witout changing napespaces - Updated character model

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -67,14 +67,15 @@
     <Compile Include="Common\DictionaryRange.cs" />
     <Compile Include="Common\Converter\DictionaryRangeConverter.cs" />
     <Compile Include="Common\IAuthorizedServiceClient.cs" />
-    <Compile Include="Common\IChangeableRepository.cs" />
-    <Compile Include="Common\ICharacterRepository.cs" />
+    <Compile Include="Common\Repositories\IChangeableRepository.cs" />
+    <Compile Include="Common\Repositories\ICharacterRepository.cs" />
     <Compile Include="Common\IConverter.cs" />
     <Compile Include="Common\IDictionaryRange.cs" />
-    <Compile Include="Common\IDiscoverable.cs" />
+    <Compile Include="Common\Repositories\IDiscoverable.cs" />
     <Compile Include="Common\ILocalizable.cs" />
-    <Compile Include="Common\ILocationRepository.cs" />
-    <Compile Include="Common\IRepository.cs" />
+    <Compile Include="Common\Repositories\ILocationRepository.cs" />
+    <Compile Include="Common\Repositories\IRepository.cs" />
+    <Compile Include="Common\Repositories\ITagsRepository.cs" />
     <Compile Include="Common\Requests\BulkDatabaseRequest.cs" />
     <Compile Include="Common\Requests\CompleteDatabaseRequest.cs" />
     <Compile Include="Common\Requests\DeleteDatabaseRequest.cs" />
@@ -85,7 +86,7 @@
     <Compile Include="Common\IServiceClient.cs" />
     <Compile Include="Common\ISubsetContext.cs" />
     <Compile Include="Common\ITimeSensitive.cs" />
-    <Compile Include="Common\IWriteable.cs" />
+    <Compile Include="Common\Repositories\IWriteable.cs" />
     <Compile Include="Common\IWriteableServiceClient.cs" />
     <Compile Include="Common\Response.cs" />
     <Compile Include="Common\Converter\ResponseConverter.cs" />
@@ -100,11 +101,9 @@
     <Compile Include="Extensions\EnumListExtension.cs" />
     <Compile Include="Resources\MarkupExtensions\EnumListExtension.cs" />
     <Compile Include="Models\Characters\Character.cs" />
-    <Compile Include="Models\Characters\Character.Family.cs" />
+    <Compile Include="Models\Characters\Family.cs" />
     <Compile Include="Models\Characters\Character.Metadata.cs" />
     <Compile Include="Models\Characters\Character.PhysicalAppearance.cs" />
-    <Compile Include="Models\Characters\Character.PhysicalAppearance.Face.cs" />
-    <Compile Include="Models\Characters\Character.PhysicalAppearance.FemaleMeasurements.cs" />
     <Compile Include="Models\Locations\City.cs" />
     <Compile Include="Models\Locations\Location.cs" />
     <Compile Include="Models\Locations\Planet.cs" />
