- IRepository<TKey,TValue> does no longer implement IDiscoverable<TKey>, since not every repository needs to be discoverable. - Added missing code contracts to the ResponseConverterClass. - Added ITagsRepository and Tags model for duture implementation.

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Converter\DbGeographyToStringConverter.cs" />
     <Compile Include="Extensions\EnumExtensionMethods.cs" />
     <Compile Include="Extensions\EnumListExtension.cs" />
+    <Compile Include="Models\Tag.cs" />
     <Compile Include="Resources\MarkupExtensions\EnumListExtension.cs" />
     <Compile Include="Models\Characters\Character.cs" />
     <Compile Include="Models\Characters\Family.cs" />
