--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Common\Repositories\ILocationRepository.cs" />
     <Compile Include="Common\Repositories\IRepository.cs" />
     <Compile Include="Common\Repositories\ITagsRepository.cs" />
+    <Compile Include="Common\RepositoryFactoryBase.cs" />
     <Compile Include="Common\Requests\BulkDatabaseRequest.cs" />
     <Compile Include="Common\Requests\CompleteDatabaseRequest.cs" />
     <Compile Include="Common\Requests\DeleteDatabaseRequest.cs" />
