- Fixed an error with NuGet - Added Tags repository project and added it as an import to the Bootstrapper.

--- a/Tools/Main.csproj
+++ b/Tools/Main.csproj
@@ -13,8 +13,10 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
-    <NuGetPackageImportStamp>cddfb14d</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>8e838df2</NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -121,10 +123,6 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CharacterPresenter\CharacterPresenter.csproj">
-      <Project>{d5cd3f18-098a-4018-b5ea-8b5d34e220ca}</Project>
-      <Name>CharacterPresenter</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Core\Core.csproj">
       <Project>{8ECA933F-6458-441C-9963-479C91CA664F}</Project>
       <Name>Core</Name>
@@ -137,6 +135,10 @@
       <Project>{80e4e7fe-e727-4946-ae56-0782a2aa1ef9}</Project>
       <Name>Locations</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Modules\Tags\Tags.csproj">
+      <Project>{f6d938cc-6742-4306-8d64-303218d74b34}</Project>
+      <Name>Tags</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="FodyWeavers.xml" />
@@ -148,7 +150,9 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Fody.1.28.3\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.1.28.3\build\Fody.targets'))" />
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
   </Target>
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
