--- a/Modules/Tags/Tags.csproj
+++ b/Modules/Tags/Tags.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{80E4E7FE-E727-4946-AE56-0782A2AA1EF9}</ProjectGuid>
+    <ProjectGuid>{F6D938CC-6742-4306-8D64-303218D74B34}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RpgTools.Locations</RootNamespace>
-    <AssemblyName>Locations</AssemblyName>
+    <RootNamespace>RpgTools.Tags</RootNamespace>
+    <AssemblyName>Tags</AssemblyName>
     <TargetFrameworkVersion>v4.5.3</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -32,17 +32,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -54,49 +49,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converter\CityDataContractConverter.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Converter\CityLocationConverter.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Converter\LocationConverter.cs" />
-    <Compile Include="Converter\LocationDataContractConverter.cs" />
-    <Compile Include="Converter\PlanetDataContractConverter.cs" />
-    <Compile Include="Converter\PlanetLocationConverter.cs" />
-    <Compile Include="Converter\SectorDataContractConverter.cs" />
-    <Compile Include="Converter\SectorLocationConverter.cs" />
-    <Compile Include="Converter\StarSystemLocationConverter.cs" />
-    <Compile Include="Converter\SystemDataContractConverter.cs" />
-    <Compile Include="Requests\LocationBulkRequest.cs" />
-    <Compile Include="Requests\LocationCompleteRequest.cs" />
-    <Compile Include="Requests\LocationDeleteRequest.cs" />
-    <Compile Include="Requests\LocationWriteRequest.cs" />
-    <Compile Include="DataContracts\CityDetailsDataContract.cs" />
-    <Compile Include="DataContracts\LocationDataContract.cs" />
-    <Compile Include="DataContracts\LocationDetailsDataContract.cs" />
-    <Compile Include="DataContracts\PlanetDetailsDataContract.cs" />
-    <Compile Include="DataContracts\SectorDetailsDataContract.cs" />
-    <Compile Include="DataContracts\StarSystemDetailsDataContract.cs" />
-    <Compile Include="LocationContext.cs" />
-    <Compile Include="Requests\LocationDetailsRequest.cs" />
-    <Compile Include="Requests\LocationDiscoveryRequest.cs" />
-    <Compile Include="LocationRepository.cs" />
-    <Compile Include="LocationRepositoryFactory.cs" />
-    <Compile Include="Migrations\201503111633274_Initial.cs" />
-    <Compile Include="Migrations\201503111633274_Initial.Designer.cs">
-      <DependentUpon>201503111633274_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201503111635149_Version1.cs" />
-    <Compile Include="Migrations\201503111635149_Version1.Designer.cs">
-      <DependentUpon>201503111635149_Version1.cs</DependentUpon>
+    <Compile Include="Converter\TagConverter.cs" />
+    <Compile Include="Converter\TagDataContractConverter.cs" />
+    <Compile Include="DataContracts\TagDataContract.cs" />
+    <Compile Include="Migrations\201504181309195_v1.cs" />
+    <Compile Include="Migrations\201504181309195_v1.Designer.cs">
+      <DependentUpon>201504181309195_v1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <Compile Include="TagsRepositoryFactory.cs" />
+    <Compile Include="TagsRepository.cs">
+      <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Core.csproj">
@@ -105,14 +70,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201503111633274_Initial.resx">
-      <DependentUpon>201503111633274_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201503111635149_Version1.resx">
-      <DependentUpon>201503111635149_Version1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201504181309195_v1.resx">
+      <DependentUpon>201504181309195_v1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
